# rgc-llm-v1

./: LICENSE  README.en.md  README.math.md  README.md  README.paper.md  README.zh-CN.md  pyproject.toml  rgc-llm-v1.tar  train.py
configs/: default.yaml
data/: train_samples.json  train_samples.jsonl
exports/modules/: decoder.pt  encoder.pt  operators.pt  resonance.pt  scheduler.pt
outputs/default/: epoch_1.pt  epoch_2.pt  final.pt
src/rgc_llm/: __init__.py  config.py  model.py
src/rgc_llm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/rgc_llm/cli/: __init__.py  export.py  infer.py  train.py
src/rgc_llm/core/: graph.py
src/rgc_llm/modules/: decoder.py  event_encoder.py  goal_field.py  memory.py  operators.py  resonance.py  scheduler.py
src/rgc_llm/training/: dataset.py  losses.py  trainer.py
src/rgc_llm/utils/: checkpointing.py
tests/: test_checkpoint_export.py  test_dataset_loading.py  test_forward.py  test_graph_build.py  test_training.py
